app/lib/core_bindings/lenny_bindings.dart

// ignore_for_file: type=lint

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

/// Generated from core/include/lenny/lenny.h. Do not edit.
class LennyBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LennyBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LennyBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int lenny_abi_version() {
    return _lenny_abi_version();
  }

  late final _lenny_abi_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>('lenny_abi_version');
  late final _lenny_abi_version = _lenny_abi_versionPtr
      .asFunction<int Function()>();

  int lenny_now_us() {
    return _lenny_now_us();
  }

  late final _lenny_now_usPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>('lenny_now_us');
  late final _lenny_now_us = _lenny_now_usPtr.asFunction<int Function()>();

  int lenny_receiver_approve(ffi.Pointer<lenny_session> s, int accept) {
    return _lenny_receiver_approve(s, accept);
  }

  late final _lenny_receiver_approvePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<lenny_session>, ffi.Int32)
        >
      >('lenny_receiver_approve');
  late final _lenny_receiver_approve = _lenny_receiver_approvePtr
      .asFunction<int Function(ffi.Pointer<lenny_session>, int)>();

  ffi.Pointer<lenny_session> lenny_receiver_create(
    ffi.Pointer<lenny_receiver_config> config,
    ffi.Pointer<lenny_receiver_callbacks> callbacks,
  ) {
    return _lenny_receiver_create(config, callbacks);
  }

  late final _lenny_receiver_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<lenny_session> Function(
            ffi.Pointer<lenny_receiver_config>,
            ffi.Pointer<lenny_receiver_callbacks>,
          )
        >
      >('lenny_receiver_create');
  late final _lenny_receiver_create = _lenny_receiver_createPtr
      .asFunction<
        ffi.Pointer<lenny_session> Function(
          ffi.Pointer<lenny_receiver_config>,
          ffi.Pointer<lenny_receiver_callbacks>,
        )
      >();

  int lenny_receiver_new_pair_token(
    ffi.Pointer<lenny_session> s,
    int ttl_ms,
    ffi.Pointer<ffi.Uint8> out,
  ) {
    return _lenny_receiver_new_pair_token(s, ttl_ms, out);
  }

  late final _lenny_receiver_new_pair_tokenPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<lenny_session>,
            ffi.Uint32,
            ffi.Pointer<ffi.Uint8>,
          )
        >
      >('lenny_receiver_new_pair_token');
  late final _lenny_receiver_new_pair_token = _lenny_receiver_new_pair_tokenPtr
      .asFunction<
        int Function(ffi.Pointer<lenny_session>, int, ffi.Pointer<ffi.Uint8>)
      >();

  int lenny_receiver_port(ffi.Pointer<lenny_session> s) {
    return _lenny_receiver_port(s);
  }

  late final _lenny_receiver_portPtr =
      _lookup<
        ffi.NativeFunction<ffi.Uint16 Function(ffi.Pointer<lenny_session>)>
      >('lenny_receiver_port');
  late final _lenny_receiver_port = _lenny_receiver_portPtr
      .asFunction<int Function(ffi.Pointer<lenny_session>)>();

  int lenny_receiver_select_stream(
    ffi.Pointer<lenny_session> s,
    ffi.Pointer<lenny_stream_settings> preferred,
  ) {
    return _lenny_receiver_select_stream(s, preferred);
  }

  late final _lenny_receiver_select_streamPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<lenny_session>,
            ffi.Pointer<lenny_stream_settings>,
          )
        >
      >('lenny_receiver_select_stream');
  late final _lenny_receiver_select_stream = _lenny_receiver_select_streamPtr
      .asFunction<
        int Function(
          ffi.Pointer<lenny_session>,
          ffi.Pointer<lenny_stream_settings>,
        )
      >();

  int lenny_receiver_send_control(
    ffi.Pointer<lenny_session> s,
    ffi.Pointer<lenny_control> control,
  ) {
    return _lenny_receiver_send_control(s, control);
  }

  late final _lenny_receiver_send_controlPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<lenny_session>,
            ffi.Pointer<lenny_control>,
          )
        >
      >('lenny_receiver_send_control');
  late final _lenny_receiver_send_control = _lenny_receiver_send_controlPtr
      .asFunction<
        int Function(ffi.Pointer<lenny_session>, ffi.Pointer<lenny_control>)
      >();

  int lenny_receiver_start(ffi.Pointer<lenny_session> s) {
    return _lenny_receiver_start(s);
  }

  late final _lenny_receiver_startPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<lenny_session>)>
      >('lenny_receiver_start');
  late final _lenny_receiver_start = _lenny_receiver_startPtr
      .asFunction<int Function(ffi.Pointer<lenny_session>)>();

  int lenny_receiver_trust_device(
    ffi.Pointer<lenny_session> s,
    ffi.Pointer<ffi.Uint8> device_id,
  ) {
    return _lenny_receiver_trust_device(s, device_id);
  }

  late final _lenny_receiver_trust_devicePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<lenny_session>, ffi.Pointer<ffi.Uint8>)
        >
      >('lenny_receiver_trust_device');
  late final _lenny_receiver_trust_device = _lenny_receiver_trust_devicePtr
      .asFunction<
        int Function(ffi.Pointer<lenny_session>, ffi.Pointer<ffi.Uint8>)
      >();

  int lenny_sender_connect(
    ffi.Pointer<lenny_session> s,
    ffi.Pointer<ffi.Char> host,
    int port,
    ffi.Pointer<ffi.Uint8> pair_token,
  ) {
    return _lenny_sender_connect(s, host, port, pair_token);
  }

  late final _lenny_sender_connectPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<lenny_session>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint16,
            ffi.Pointer<ffi.Uint8>,
          )
        >
      >('lenny_sender_connect');
  late final _lenny_sender_connect = _lenny_sender_connectPtr
      .asFunction<
        int Function(
          ffi.Pointer<lenny_session>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Uint8>,
        )
      >();

  ffi.Pointer<lenny_session> lenny_sender_create(
    ffi.Pointer<lenny_sender_config> config,
    ffi.Pointer<lenny_sender_callbacks> callbacks,
  ) {
    return _lenny_sender_create(config, callbacks);
  }

  late final _lenny_sender_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<lenny_session> Function(
            ffi.Pointer<lenny_sender_config>,
            ffi.Pointer<lenny_sender_callbacks>,
          )
        >
      >('lenny_sender_create');
  late final _lenny_sender_create = _lenny_sender_createPtr
      .asFunction<
        ffi.Pointer<lenny_session> Function(
          ffi.Pointer<lenny_sender_config>,
          ffi.Pointer<lenny_sender_callbacks>,
        )
      >();

  int lenny_sender_send_control_state(
    ffi.Pointer<lenny_session> s,
    ffi.Pointer<lenny_control_state> state,
  ) {
    return _lenny_sender_send_control_state(s, state);
  }

  late final _lenny_sender_send_control_statePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<lenny_session>,
            ffi.Pointer<lenny_control_state>,
          )
        >
      >('lenny_sender_send_control_state');
  late final _lenny_sender_send_control_state =
      _lenny_sender_send_control_statePtr
          .asFunction<
            int Function(
              ffi.Pointer<lenny_session>,
              ffi.Pointer<lenny_control_state>,
            )
          >();

  int lenny_sender_send_stream_status(
    ffi.Pointer<lenny_session> s,
    int state,
    ffi.Pointer<ffi.Char> reason,
  ) {
    return _lenny_sender_send_stream_status(s, state, reason);
  }

  late final _lenny_sender_send_stream_statusPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<lenny_session>,
            ffi.Uint8,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('lenny_sender_send_stream_status');
  late final _lenny_sender_send_stream_status =
      _lenny_sender_send_stream_statusPtr
          .asFunction<
            int Function(ffi.Pointer<lenny_session>, int, ffi.Pointer<ffi.Char>)
          >();

  int lenny_sender_send_video_config(
    ffi.Pointer<lenny_session> s,
    ffi.Pointer<ffi.Uint8> data,
    int size,
  ) {
    return _lenny_sender_send_video_config(s, data, size);
  }

  late final _lenny_sender_send_video_configPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<lenny_session>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('lenny_sender_send_video_config');
  late final _lenny_sender_send_video_config =
      _lenny_sender_send_video_configPtr
          .asFunction<
            int Function(
              ffi.Pointer<lenny_session>,
              ffi.Pointer<ffi.Uint8>,
              int,
            )
          >();

  int lenny_sender_send_video_frame(
    ffi.Pointer<lenny_session> s,
    ffi.Pointer<ffi.Uint8> data,
    int size,
    int pts_us,
    int orientation,
    int flags,
  ) {
    return _lenny_sender_send_video_frame(
      s,
      data,
      size,
      pts_us,
      orientation,
      flags,
    );
  }

  late final _lenny_sender_send_video_framePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<lenny_session>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Int64,
            ffi.Uint8,
            ffi.Uint8,
          )
        >
      >('lenny_sender_send_video_frame');
  late final _lenny_sender_send_video_frame = _lenny_sender_send_video_framePtr
      .asFunction<
        int Function(
          ffi.Pointer<lenny_session>,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
          int,
        )
      >();

  int lenny_sender_update_stream(
    ffi.Pointer<lenny_session> s,
    ffi.Pointer<lenny_stream_settings> effective,
  ) {
    return _lenny_sender_update_stream(s, effective);
  }

  late final _lenny_sender_update_streamPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<lenny_session>,
            ffi.Pointer<lenny_stream_settings>,
          )
        >
      >('lenny_sender_update_stream');
  late final _lenny_sender_update_stream = _lenny_sender_update_streamPtr
      .asFunction<
        int Function(
          ffi.Pointer<lenny_session>,
          ffi.Pointer<lenny_stream_settings>,
        )
      >();

  int lenny_session_control_state(
    ffi.Pointer<lenny_session> s,
    ffi.Pointer<lenny_control_state> out,
  ) {
    return _lenny_session_control_state(s, out);
  }

  late final _lenny_session_control_statePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<lenny_session>,
            ffi.Pointer<lenny_control_state>,
          )
        >
      >('lenny_session_control_state');
  late final _lenny_session_control_state = _lenny_session_control_statePtr
      .asFunction<
        int Function(
          ffi.Pointer<lenny_session>,
          ffi.Pointer<lenny_control_state>,
        )
      >();

  void lenny_session_destroy(ffi.Pointer<lenny_session> s) {
    return _lenny_session_destroy(s);
  }
